Cambios generales y al readme

--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     <title>Version Movil</title>
     </head>
     <body>
-        <div class="centrado">
-            <div class="formulario">
-                <h2>BIENVENIDOS A MI PAGINA</h2>
-                <input type="text" name="correo" id="correoElectronico" placeholder="Correo Electrónico">
-                <input type="text" name="contrasenya" id="contrasenya" placeholder="Contraseña">
-                <input type="button" value="Iniciar Sesión">
-                <hr>
-                <input type="button" value="Crear Cuenta">
-                <input type="button" value="Ver Aspirantes">
-            </div>
+        <div class="formulario">
+            <img src="img/logo.png" width="200px" alt="LogoCentro">
+            <h2>Registro.</h2>
+            <input type="text" name="correo" id="correoElectronico" placeholder="Correo Electrónico">
+            <input type="text" name="contrasenya" id="contrasenya" placeholder="Contraseña">
+            <input type="button" value="Iniciar Sesión">
+            <hr>
+            <input type="button" value="Crear Cuenta">
+            <input type="button" value="Ver Aspirantes">
         </div>
         <footer>
-            <nav>
-                <img src="img/logo.png" width="50px" alt="LogoCentro">ContrataMe
-            </nav>
+            <img src="img/logo.png" width="60px" alt="LogoCentro">
+            <span>ContrataMe</span>
         </footer>
     </body>
 </html>
